# spin-middleware-terrifying-nonsense

./: Cargo.toml  P3TEST.wasm  compose.yaml  spin.toml
middlybiddly/: Cargo.toml
middlybiddly/src/: lib.rs
middlybiddly2/: Cargo.toml
middlybiddly2/src/: lib.rs
src/: lib.rs
wit/: world.wit
