[package]
name = "middleware-terrifying-nonsense"
authors = ["itowlson <ivan.towlson@fermyon.com>"]
description = ""
version = "0.1.0"
rust-version = "1.93"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
bytes = "1.11.1"
futures = "0.3.31"
http = "1"
http-body = "1"
http-body-util = "0.1.3"
spin-sdk = "6"
# tokio = { version = "1.48.0", default-features = false, features = ["sync"] }
# tokio-stream = "0.1.17"
wit-bindgen = "0.54"
# wasip3 = "0.1.1"

[workspace]
members = ["middlybiddly", "middlybiddly2"]
