[package]
name = "middlybiddly"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
futures = "0.3.31"
http = "1"
http-body = "1"
http-body-util = "0.1.3"
spin-sdk = { path = "/home/ivan/github/spin-rust-sdk", features = ["wasip3-unstable"] }
wit-bindgen = "0.46"
