[package]
name = "middlybiddly"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
bytes = "*"
futures = "0.3.31"
http = "1"
http-body = "1"
http-body-util = "0.1.3"
spin-sdk = { git = "https://github.com/itowlson/spin-rust-sdk", branch = "wasip3-rc-26-01", features = ["wasip3-unstable"] }
wit-bindgen = "0.51"
